v1.8.0
ADDED:
- Support for CustomFishing plugin.
- Support for multiple jobs per job zone.
- Explicit setting to toggle zone hours.
- Missing editor GUI titles to the lang config.
- PlaceholderAPI placeholders for: Total jobs level, Primary job names, Secondary job names, Jobs joined, Jobs max. joinable.

CHANGED:
- Zone day hours accepts single hours value now.
- Slightly improved zones GUI editor.

FIXED:
- Compatibility with EvenMoreFish 2.0.
- Zone payment multiplier not worked at all since EconomyBridge integration.