@@ -5,6 +5,8 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import su.nightexpress.excellentjobs.JobsPlugin;
 import su.nightexpress.excellentjobs.booster.impl.Booster;
+import su.nightexpress.excellentjobs.config.Config;
+import su.nightexpress.excellentjobs.config.Lang;
 import su.nightexpress.excellentjobs.data.impl.JobData;
 import su.nightexpress.excellentjobs.data.impl.JobUser;
 import su.nightexpress.excellentjobs.job.impl.Job;
@@ -12,6 +14,7 @@ import su.nightexpress.excellentjobs.job.impl.JobState;
 import su.nightexpress.excellentjobs.stats.StatsManager;
 import su.nightexpress.excellentjobs.stats.impl.TopEntry;
 import su.nightexpress.nightcore.util.NumberUtil;
+import su.nightexpress.nightcore.util.text.NightMessage;
 
 import java.util.Collection;
 import java.util.List;
@@ -45,7 +48,7 @@ public class PlaceholderHook {
         @Override
         @NotNull
         public String getAuthor() {
-            return this.plugin.getDescription().getAuthors().get(0);
+            return this.plugin.getDescription().getAuthors().getFirst();
         }
 
         @Override
@@ -69,12 +72,30 @@ public class PlaceholderHook {
         public String onPlaceholderRequest(Player player, @NotNull String params) {
             if (player == null) return null;
 
+            JobUser user = this.plugin.getUserManager().getUserData(player);
+
+            if (params.equalsIgnoreCase("total_level")) {
+                return String.valueOf(user.countTotalLevel());
+            }
+            if (params.equalsIgnoreCase("jobs_primary")) {
+                return listJobs(user, JobState.PRIMARY);
+            }
+            if (params.equalsIgnoreCase("jobs_secondary")) {
+                return listJobs(user, JobState.SECONDARY);
+            }
+            if (params.equalsIgnoreCase("jobs_joined")) {
+                return NumberUtil.format(user.countActiveJobs());
+            }
+            if (params.equalsIgnoreCase("jobs_max_joinable")) {
+                int count = plugin.getJobManager().countJoinableJobs(player);
+                return count < 0 ? Lang.OTHER_INFINITY.getString() : NumberUtil.format(count);
+            }
+
             String key = params.split("_")[0];
             String rest = params.substring(key.length() + 1);
 
             Job job = plugin.getJobManager().getJobById(key);
             if (job != null) {
-                JobUser user = this.plugin.getUserManager().getUserData(player);
                 JobData data = user.getData(job);
 
                 if (rest.equalsIgnoreCase("level")) {
@@ -124,7 +145,7 @@ public class PlaceholderHook {
                     StatsManager statsManager = this.plugin.getStatsManager();
                     if (statsManager == null) return null;
 
-                    int pos = NumberUtil.getInteger(info[0], 0);
+                    int pos = NumberUtil.getIntegerAbs(info[0], 0);
                     String type = info[1];
 
                     List<TopEntry> list = statsManager.getLevelTopEntries(job);
@@ -148,7 +169,20 @@ public class PlaceholderHook {
                     return NumberUtil.format(job.getEmployeesAmount(JobState.SECONDARY));
                 }
             }
+            // TODO Stats
             return null;
+        }
+
+        @NotNull
+        private static String listJobs(@NotNull JobUser user, @NotNull JobState state) {
+            String delimiter = Config.PLACEHOLDERS_JOBS_DELIMITER.get();
+            List<String> jobNames = user.getDatas().stream()
+                .filter(data -> data.getState() == state)
+                .map(data -> data.getJob().getName())
+                .sorted(String::compareTo)
+                .toList();
+
+            return NightMessage.asLegacy(jobNames.isEmpty() ? Config.PLACEHOLDERS_JOBS_FALLBACK.get() : String.join(delimiter, jobNames));
         }
     }
 }
